--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,15 @@
-*{
+* {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  width: 100%;
+  justify-content: center;
+  background-color: #353a42;
 }
 
 .App {
   text-align: center;
 }
-
